# radiative-transfer

./: .gitignore  CMakeLists.txt  README.md
CMake/: PreventInSourceBuilds.cmake
config/: var-config.h.in
include/: Constants.h  Energy.h  GLQuad.h  NDArray.h  ParameterHandler.h  Planck.h  compile_time_vals.h  correction.h  param.h  solver.h
planckian/: Constants.h.bak  GLQuad.cc  Main.cc  Main.cc.bak  Main.cc.bak.bak  Main_new.cc.bak  Main_old.cc  Planck.cc  example.cc  rad
prm/: default.prm  llnl_slab_test.prm  llnl_slab_test_group_bounds.txt  llnl_slab_test_group_kappa_a.txt  multi_group_equilibrium.prm  single_group.prm  template.prm  template_group_kappa_a.txt
scripts/: plot_gray_results.py  plot_results.py
src/: CMakeLists.txt  GLQuad.cc  GLQuad.cpp  ParameterHandler.cpp  Planck.cc  correction.cpp  main.cc  main.cpp  param.cpp  solver.cpp
tests/: CMakeLists.txt  random_test.cpp  test_gray.cpp  test_lapack.cpp  test_planckian.cpp
